--- a/Surseed/Surseed/Views/Home/Forgotpassword.cshtml
+++ b/Surseed/Surseed/Views/Home/Forgotpassword.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "SignIn";
+    ViewBag.Title = "Forgotpassword";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,31 +10,28 @@
         <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
         <div class="container">
             <div class="banner_content text-center">
-                <h2>Organization SignIn</h2>
+                <h2>Forgot Password</h2>
             </div>
         </div>
     </div>
 </section>
 <!--================End Home Banner Area =================-->
 <!--================Contact Area =================-->
-<section class="contact_area pt-90 pb-75 gray-bg">
+<section class="contact_area pt-90 pb-75 gray-bg" id="forgot">
     <div class="container">
         <div class="row">
             <div class="col-4 offset-lg-4">
-                <div class="volunteer-form signin">
-                    <form class="row contact_form" action="@Url.Action("Home","Organisation")" method="post" novalidate="novalidate">
+                <div class="volunteer-form">
+                    <p>Enter your valid mail Id</p>
+                    <form class="row contact_form" action="" method="post" novalidate="novalidate">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address Or UserName">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="password" name="password" placeholder="**************">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address" autofocus>
                             </div>
                             <div class="form-group text-center">
-                                <button type="submit" value="submit" class="btn submit_btn">Login</button>
+                                <button type="submit" value="submit" class="btn submit_btn">Submit</button>
                                 <hr />
-                                <p><a href="@Url.Action("Forgotpassword","Home")">Forgot Password</a></p>
-                                <p>Looking for New <a href="@Url.Action("SignUp","Home")">Registeration?</a></p>
+                                <p><a href="@Url.Action("SignIn","Home")">Login</a></p>
                             </div>
 
                         </div>
@@ -45,4 +42,5 @@
     </div>
 </section>
 <!--================Contact Area =================-->
+
 
