--- a/Surseed/Surseed/Views/Home/SignUp.cshtml
+++ b/Surseed/Surseed/Views/Home/SignUp.cshtml
@@ -24,7 +24,7 @@
                 <!--Volunteer About Image Area Start-->
                 <div class="about-img-area img-full">
                     <div class="img-title">
-                        <img src="img/about1.png" alt="">
+                        <img src="@Url.Content("~/img/about1.png")" alt="">
                     </div>
                 </div>
                 <!--Volunteer About Image Area End-->
@@ -86,16 +86,12 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="volunteer-form-style mb-20">
-                                    <input name="address-two" class="form-control" placeholder="Address Line Two" type="text">
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-4 col-12">
-                                <div class="volunteer-form-style mb-20">
                                     <input name="city" class="form-control" placeholder="City" type="text">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-12 mb-20">
-                                <div class="volunteer-form-style">
+                        
+                            <div class="col-lg-6">
+                                <div class="volunteer-form-style mb-20">
                                     <select class="wide nice-select">
                                         <option value="">- Choose State -</option>
                                         <option value="AK">Alaska</option>
@@ -160,7 +156,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-12">
+                            <div class="col-lg-6">
                                 <div class="volunteer-form-style mb-20">
                                     <input name="zip-code" class="form-control" placeholder="Zip Code" type="text">
                                 </div>
