--- a/Surseed/Surseed/Views/Shared/_OrganisationLayout.cshtml
+++ b/Surseed/Surseed/Views/Shared/_OrganisationLayout.cshtml
@@ -18,6 +18,7 @@
     <link href="@Url.Content("~/assets/css/bootstrap.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/assets/css/icons.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/assets/css/app.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/assets/css/style.css")" rel="stylesheet" type="text/css" />
     <style>
         main {
             width: 400px;
@@ -474,7 +475,7 @@
     <!-- /Right-bar -->
 
     <!-- Vendor js -->
-    <script src="assets/js/vendor.min.js"></script>
+    <script src="@Url.Content("~/assets/js/vendor.min.js")"></script>
 
     <!-- Bootstrap select plugin -->
     <script src="@Url.Content("~/assets/libs/bootstrap-select/bootstrap-select.min.js")"></script>
@@ -549,5 +550,7 @@
 			}
 			createPie(".pieID.legend", ".pieID.pie");
 
-    </script></body>
+    </script>
+
+</body>
 </html>
