--- a/Surseed/Surseed/Views/Shared/_Layout.cshtml
+++ b/Surseed/Surseed/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                                 <a href="javascript:void(0);" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item"><a class="nav-link" href="@Url.Action("OurStory", "AboutUs")">Our Story</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Blog","AboutUs")">Blog</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="@Url.Action("index","Blog")">Blog</a></li>
                                     <li class="nav-item"><a class="nav-link" href="@Url.Action("ContactUs", "AboutUs")">Contact Us</a></li>
                                 </ul>
                             </li>
