--- a/Surseed/Surseed/Views/Organisation/SignIn.cshtml
+++ b/Surseed/Surseed/Views/Organisation/SignIn.cshtml
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-4 offset-lg-4">
                 <div class="volunteer-form signin">
-                    <form class="row contact_form" action="#" method="post" novalidate="novalidate">
+                    <form class="row contact_form" action="@Url.Action("home","Organisation")" method="post" novalidate="novalidate">
                         <div class="col-md-12">
                             <div class="form-group">
                                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address Or UserName">
