--- a/Surseed/Surseed/Views/Organisation/SignUp.cshtml
+++ b/Surseed/Surseed/Views/Organisation/SignUp.cshtml
@@ -54,7 +54,7 @@
                     <div class="volunteer-form-title">
                         <h3>Find your Organization</h3>
                     </div>
-                    <form action="dashboard/index.html">
+                    <form action="dashboard/index.html" method="post">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="volunteer-form-style mb-20">
