--- a/Surseed/Surseed/Views/Organisation/SignUp.cshtml
+++ b/Surseed/Surseed/Views/Organisation/SignUp.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Surseed.Models.OrganisitaionModel.Resistraion
+
 @{
     ViewBag.Title = "SignUp";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -58,7 +59,10 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="volunteer-form-style mb-20">
-                                    <input name="name" class="form-control" placeholder="Organization Name" type="text">
+                                    @*<input name="name" class="form-control" placeholder="Organization Name" type="text">*@
+
+                                    @Html.TextBoxFor(model => model., new { @class = "form-control", @placeholder = "Organization Name", @required = "true" })
+                                    <span style="color: red">@Html.ValidationMessageFor(model => model.UserName)</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
