--- a/Surseed/Surseed/Views/Shared/_OrganisationLayout.cshtml
+++ b/Surseed/Surseed/Views/Shared/_OrganisationLayout.cshtml
@@ -270,7 +270,7 @@
                             </a>
                             <div class="dropdown-divider"></div>
                             <!-- item-->
-                            <a href="../index.html" class="dropdown-item notify-item">
+                            <a href="@Url.Action("LogOut","Organisation")" class="dropdown-item notify-item">
                                 <i class="fe-log-out"></i>
                                 <span>Logout</span>
                             </a>
