--- a/Surseed/Surseed/Views/Organisation/SignIn.cshtml
+++ b/Surseed/Surseed/Views/Organisation/SignIn.cshtml
@@ -26,9 +26,9 @@
                 {
                     if (!string.IsNullOrEmpty((string)TempData["msg"]))
                     {
-                        <div class="alert alert-success fade in">
+                        <div class="alert alert-success in">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                            <i class="fa fa-check alert-icon"></i>
+                            
                             <strong> @TempData["msg"]</strong>
                         </div>
                     }
