--- a/Surseed/Surseed/Views/Organisation/SignUp.cshtml
+++ b/Surseed/Surseed/Views/Organisation/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿@model Surseed.Models.OrganisitaionModel.Resistraion
+﻿@model Surseed.Models.OrganizationModel.Resistraion
 
 @{
     ViewBag.Title = "SignUp";
