--- a/Surseed/Surseed/Views/Shared/_sidebar.cshtml
+++ b/Surseed/Surseed/Views/Shared/_sidebar.cshtml
@@ -63,17 +63,17 @@
                   
                         <a class="" href="#">
                             <i class="fa fa-picture-o" aria-hidden="true"></i>
-                            <span class="txt">Master</span>
+                            <span class="txt">List</span>
                         </a>
                         <ul class="sub" style="display:@TempData["show"]">
                             <li>
-                                <a class="@TempData["University"]" href="@Url.Action("AddUniversity", "Master")">
+                                <a class="@TempData["Organizationlist"]" href="@Url.Action("UserList", "Organisation")">
                                     <i class="s16 icomoon-icon-arrow-right-3"></i>
-                                    <span class="txt">University</span>
+                                    <span class="txt">Organization List</span>
                                     <span class="@TempData["indicator"]"></span>
                                 </a>
                             </li>
-                            <li>
+                            @*<li>
                                 <a class="@TempData["subject"]" href="@Url.Action("Subject", "Master")">
                                     <i class="s16 icomoon-icon-arrow-right-3"></i>
                                     <span class="txt">Subject</span>
@@ -86,7 +86,7 @@
                                     <span class="txt">Level</span>
                                     <span class="@TempData["indicator"]"></span>
                                 </a>
-                            </li>
+                            </li>*@
                         </ul>
                       
                     </li>
