--- a/Surseed/Surseed/Views/Organisation/SignUp.cshtml
+++ b/Surseed/Surseed/Views/Organisation/SignUp.cshtml
@@ -147,8 +147,8 @@
                             <div class="col-lg-12">
                                 <h5 class="green-bg text-white p-10">Profile Creator Information</h5>
                             </div>
-                            <div class="col-lg-4 mb-20">
-                                <div class="volunteer-form-style">
+                            <div class="col-lg-4">
+                                <div class="volunteer-form-style mb-20">
                                     @Html.DropDownListFor(model => model.OrganizationUserTyepId, (IEnumerable<SelectListItem>)ViewBag.OrgUsrTypeList, "---Select  Type---", new { @class = "form-control", @required = "True" })
 
                                 </div>
