--- a/Surseed/Surseed/Views/Shared/_sidebar.cshtml
+++ b/Surseed/Surseed/Views/Shared/_sidebar.cshtml
@@ -67,7 +67,7 @@
                         </a>
                         <ul class="sub" style="display:@TempData["show"]">
                             <li>
-                                <a class="@TempData["Organizationlist"]" href="@Url.Action("UserList", "Organisation")">
+                                <a class="@TempData["Organizationlist"]" href="@Url.Action("List", "Organisation")">
                                     <i class="s16 icomoon-icon-arrow-right-3"></i>
                                     <span class="txt">Organization List</span>
                                     <span class="@TempData["indicator"]"></span>
