--- a/Surseed/Surseed/Views/Organisation/UserList.cshtml
+++ b/Surseed/Surseed/Views/Organisation/UserList.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "UserList";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 
-    DataSet ds = (DataSet)ViewBag.organisationlist;
+    DataSet ds = (DataSet)ViewBag.organisationuserlist;
     DataTable dt = new DataTable();
     if (ds != null && ds.Tables[0].Rows.Count > 0)
     {
@@ -15,7 +15,7 @@
     <!--Content wrapper-->
     <div class="heading">
         <!--  .heading-->
-        <h3>Organization List</h3>
+        <h3>User List</h3>
         <div class="resBtnSearch"><a href="#"><span class="s16 icomoon-icon-search-3"></span></a></div>
         <!--  /search -->
     </div>
@@ -28,7 +28,7 @@
                 <!-- Start .panel -->
 
                 <div class="panel-heading">
-                    <h4 class="panel-title">Organization List</h4>
+                    <h4 class="panel-title">User List</h4>
                 </div>
                 <div class="panel-body">
                     @if (TempData.Count > 0)
@@ -41,7 +41,7 @@
                                 <strong> @TempData["msg"]</strong>
                             </div>
                         }
-                      
+
                     }
 
                     @if (dt.Rows.Count > 0)
@@ -49,34 +49,30 @@
                         <table id="tabletools" class="table table-striped table-bordered" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
-                                    <th>Organization Name</th>
-                                    <th style="width: 35%">Contact</th>
-                                    <th style="width: 35%">Address</th>
-                                    <th style="width: 35%">City</th>
-                                    <th style="width: 35%">State</th>
-                                    <th style="width: 35%">Zip</th>
-                                    <th style="width: 35%">EIN#</th>
-                                    <th style="width: 35%">Tax Id</th>
-                                    <th>Action</th>
-                                    </tr>
-                                </thead>
-                            @*<tfoot>
-                                <tr>
-                                    <th>Slider Image</th>
-                                    <th>Slider Title</th>
-                                    <th>Status</th>
-                                    <th>Action</th>*@
+                                    <th>Organization Usertype</th>
+                                    <th style="width: 35%">Name</th>
+                                    <th style="width: 35%">Gender</th>
+                                    <th style="width: 35%">Age</th>
+                                    <th style="width: 35%">Phone</th>
+                                    <th style="width: 35%">Email</th>
+                                    @*<th style="width: 35%">EIN#</th>
+                                        <th style="width: 35%">Tax Id</th>
+                                        <th style="width: 35%">No. of Users</th>*@
+                                    @*<th>Action</th>*@
+                                </tr>
+                            </thead>
+
 
                             <tbody>
 
                                 @foreach (System.Data.DataRow dr in dt.Rows)
                                 {
                                     <tr>
-                                       
+
                                         <td>
-                                            @if (!string.IsNullOrEmpty(@dr["OrganizationName"].ToString()))
+                                            @if (!string.IsNullOrEmpty(@dr["OrganizationUserType"].ToString()))
                                             {
-                                                @dr["OrganizationName"].ToString()
+                                                @dr["OrganizationUserType"].ToString()
                                             }
                                             else
                                             {
@@ -85,9 +81,14 @@
                                         </td>
 
                                         <td>
-                                            @if (!string.IsNullOrEmpty(@dr["OrganizationContactNumber"].ToString()))
+                                            @if (!string.IsNullOrEmpty(@dr["FirstName"].ToString()))
                                             {
-                                                @dr["OrganizationContactNumber"].ToString()
+                                                <span>
+                                                    @dr["FirstName"].ToString()
+                                                </span> 
+                                                <span>
+                                                    @dr["LastName"].ToString()
+                                                </span>
                                             }
                                             else
                                             {
@@ -96,9 +97,9 @@
                                         </td>
 
                                         <td>
-                                            @if (!string.IsNullOrEmpty(@dr["Address"].ToString()))
+                                            @if (!string.IsNullOrEmpty(@dr["Gender"].ToString()))
                                             {
-                                                @dr["Address"].ToString()
+                                                @dr["Gender"].ToString()
                                             }
                                             else
                                             {
@@ -107,9 +108,9 @@
                                         </td>
 
                                         <td>
-                                            @if (!string.IsNullOrEmpty(@dr["City"].ToString()))
+                                            @if (!string.IsNullOrEmpty(@dr["Age"].ToString()))
                                             {
-                                                @dr["City"].ToString()
+                                                @dr["Age"].ToString()
                                             }
                                             else
                                             {
@@ -118,9 +119,9 @@
                                         </td>
 
                                         <td>
-                                            @if (!string.IsNullOrEmpty(@dr["State"].ToString()))
+                                            @if (!string.IsNullOrEmpty(@dr["Phone"].ToString()))
                                             {
-                                                @dr["State"].ToString()
+                                                @dr["Phone"].ToString()
                                             }
                                             else
                                             {
@@ -129,9 +130,9 @@
                                         </td>
 
                                         <td>
-                                            @if (!string.IsNullOrEmpty(@dr["Zip"].ToString()))
+                                            @if (!string.IsNullOrEmpty(@dr["EmailId"].ToString()))
                                             {
-                                                @dr["Zip"].ToString()
+                                                @dr["EmailId"].ToString()
                                             }
                                             else
                                             {
@@ -139,32 +140,12 @@
                                             }
                                         </td>
 
-                                        <td>
-                                            @if (!string.IsNullOrEmpty(@dr["EIN#"].ToString()))
-                                            {
-                                                @dr["EIN#"].ToString()
-                                            }
-                                            else
-                                            {
-                                                <span>N/A</span>
-                                            }
-                                        </td>
 
-                                        <td>
-                                            @if (!string.IsNullOrEmpty(@dr["TAXID"].ToString()))
-                                            {
-                                                @dr["TAXID"].ToString()
-                                            }
-                                            else
-                                            {
-                                                <span>N/A</span>
-                                            }
-                                        </td>
 
-                                        <td>
+                                        @*<td>
                                             <a href="@Url.Action("EditSlider", "admin", new { @id = @dr["OrganizationId"].ToString() })" class="btn btn-success ml10"><i class="fa fa-pencil-square-o"></i>Edit</a>
                                             <a onclick="return ConfirmationDelete();" href="@Url.Action("DeleteSlider", "admin", new { @id = @dr["OrganizationId"].ToString() })" class="btn btn-danger ml10"><i class="fa fa-trash"></i>Delete</a>
-                                        </td>
+                                        </td>*@
                                     </tr>
                                 }
 
