please check - nabendu

--- a/Surseed/Surseed/Views/Home/Index.cshtml
+++ b/Surseed/Surseed/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="banner_content">
-                        <h3>Click, Donate, Repeat</h3>
+                        <h3>Click, Donate, Repeat;</h3>
                         <h5>Anyone, Anywhere, Anytime</h5>
                         <a href="@Url.Action("SignUp","Organisation")" class="ac_btn">ORGANIZATION SIGNUP</a> <a href="@Url.Action("SignIn","Organisation")" class="dn_btn">ORGANIZATION LOGIN</a>
                     </div>
